Version 0.3
-----------
* Post DiFX-2.6

Version 0.2
-----------
* Post DiFX-2.5
* Version for DiFX-2.6, Mar 4, 2019

Version 0.1
-----------
* Initial version
* Version for DiFX-2.5, May 16, 2017